Fix header overflow bug

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,8 +1,9 @@
 @media (min-width: 480px) {
-	.main {
-		padding: 0 var(--medium-padding);
+	.root,
+	.header {
+		padding: var(--medium-padding);
 	}
-	
+
 	.menu-btn__label {
 		display: inline;
 	}
